--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#" class="header__logo">LoremIpsum.<span>Net</span></a>
             <nav class="breadcrumps-block">
                 <ul class="breadcrumps__list list-reset">
-                    <li class="breadcrumps__item"><a href="#" class="breadcrumps__link nav__link--active">Бизнес</a></li>
+                    <li class="breadcrumps__item"><a href="#" class="breadcrumps__link breadcrumps__link--active">Бизнес</a></li>
                     <li class="breadcrumps__item"><a href="#" class="breadcrumps__link">O нас</a></li>
                     <li class="breadcrumps__item"><a href="#" class="breadcrumps__link">Цены</a></li>
                     <li class="breadcrumps__item"><a href="#" class="breadcrumps__link">Оформить заказ</a></li>
